More details about collocation / direct transcription

--- a/OptimalControl.ipynb
+++ b/OptimalControl.ipynb
@@ -128,7 +128,7 @@
     "determined directly through calculus and algebraic manipulation.\n",
     "Successfully applying analysis typically requires a relatively simple\n",
     "dynamics and cost. Numerical techniques approximate the problem by\n",
-    "discretize either the state, time, or control space and attempt to cast\n",
+    "discretizing either the state, time, and/or control space and attempt to cast\n",
     "the problem as a finite dimensional optimization. These are more\n",
     "general-purpose and can be applied to complex problems, but are more\n",
     "computationally expensive and usually require some parameter tuning to\n",
@@ -325,10 +325,10 @@
     "nonlinear systems. For example, if any modification is made to an LQR\n",
     "system, such as a non-quadratic term in the cost functional, or if state\n",
     "constraints or control constraints are added, the analytical solution no\n",
-    "longer applies. As a result, numerical methods are often applied to\n",
-    "solve a wider variety of optimal control problems. We have already seen\n",
+    "longer applies. As a result, numerical methods can solve a wider variety\n",
+    "of optimal control problems. We have already seen\n",
     "a form of trajectory optimization under the discussion of kinematic path\n",
-    "planning. We extend this to dynamic systems here.\n",
+    "planning, and here we extend this type of formulation to dynamic systems.\n",
     "\n",
     "Since trajectories are infinite-dimensional, the main challenge of\n",
     "trajectory optimization is to suitably discretize the space of\n",
@@ -338,11 +338,11 @@
     "inefficient.\n",
     "\n",
     "In any case, the general method for performing trajectory optimization\n",
-    "includes 1) defining a set of basis functions for the control\n",
+    "follows the following procedure 1) define a set of basis functions for the control\n",
     "trajectory, 2) defining a state evolution technique, 3) reformulating\n",
     "($\\ref{eq:OptimalControl}$) as a finite-dimensional optimization\n",
     "problem over the coefficients of the basis functions, and 4) optimizing\n",
-    "using some gradient-based technique.\n",
+    "using a gradient-based technique.\n",
     "\n",
     "### Piecewise-constant control and state trajectories\n",
     "\n",
@@ -386,8 +386,10 @@
     "Using this definition we can express the approximated optimal control\n",
     "function as a minimization problem:\n",
     "$$\\arg \\min_{u_1,\\ldots,u_N} \\tilde{J}(u_1,\\ldots,u_N).\n",
-    "\\label{eq:DDPProblem}$$ With control space $\\mathbb{R}^m$, this is an\n",
-    "optimization problem over $mN$ variables.\n",
+    "\\label{eq:DirectTranscription}$$\n",
+    "With control space $\\mathbb{R}^m$, this is an\n",
+    "optimization problem over $mN$ variables.  This approach is also known\n",
+    "as _direct transcription_.\n",
     "\n",
     "There is a tradeoff in determining the resolution $N$. With higher\n",
     "values of $N$, the control trajectory can obtain lower costs, but the\n",
@@ -398,7 +400,7 @@
     "### Descent approaches\n",
     "\n",
     "Standard gradient-based techniques can be used to solve the problem\n",
-    "($\\ref{eq:DDPProblem}$). One difficulty is that to take the gradient\n",
+    "($\\ref{eq:DirectTranscription}$). One difficulty is that to take the gradient\n",
     "of $\\tilde{J}$ with respect to a control variable $u_i$, observe that\n",
     "this choice of control affects *every* state variable $x_k$ with\n",
     "$i \\leq k \\leq N$. Hence,\n",
@@ -410,7 +412,8 @@
     "x_{i+1} &= g(x_i,u_{i+1},\\Delta t) \\\\\n",
     "x_{i+2} &= g(x_{i+1},u_{i+2},\\Delta t) \\\\\n",
     "&\\vdots\n",
-    "\\end{split}$$ In this list, the only equation directly affected by $u_i$\n",
+    "\\end{split}$$\n",
+    "In this list, the only equation directly affected by $u_i$\n",
     "is the first. The effects on the remaining states are due to cascading\n",
     "effects of previous states. Hence, we see that\n",
     "$$\\frac{\\partial x_i}{\\partial u_i} = \\frac{\\partial g}{\\partial u}(x_{i-1},u_i,\\Delta t)$$\n",
@@ -420,10 +423,9 @@
     "This appears to be extremely computationally expensive, since each\n",
     "evaluation of ($\\ref{eq:JacobianUi}$) requires calculating $O(N)$ derivatives,\n",
     "leading to an overall $O(N^2)$ algorithm for calculating the gradient\n",
-    "with respect to the entire control sequence. However, with a clever\n",
-    "forward/backward formulation, the gradient can be calculated with $O(N)$\n",
-    "operations.\n",
+    "with respect to the entire control sequence.\n",
     "\n",
+    "However, with a clever forward/backward formulation, the gradient can be calculated with $O(N)$ operations.\n",
     "Note that all expressions of the form\n",
     "$\\frac{\\partial x_k}{\\partial u_i}$ are equivalent to\n",
     "$\\frac{\\partial x_k}{\\partial x_i}\\frac{\\partial x_i}{\\partial u_i}$.\n",
@@ -445,33 +447,42 @@
     "\n",
     "However, problems of this sort are usually poorly scaled, and hence\n",
     "standard gradient descent converges slowly. The most commonly used\n",
-    "higher-order technique is known as Differential Dynamic Programming\n",
+    "higher-order technique is known as _Differential Dynamic Programming_\n",
     "(DDP), which is an efficient recursive method for performing Newton's\n",
     "method. Given a current control trajectory, it approximates the cost\n",
     "function as a quadratic function of the controls, and solves for the\n",
-    "minimum of the function. The exact steps for implementing DDP are beyond\n",
+    "minimum of the function.  A similar approach is the _Iterative LQR_ (iLQR) algorithm, which is very closely related to DDP but drops the 2nd derivative of the dynamics function. The exact steps for implementing DDP and iLQR are beyond\n",
     "the scope of this course but are readily available from other sources.\n",
     "\n",
-    "### Other control / state parameterizations\n",
+    "### Pseudospectral / collocation methods\n",
     "\n",
     "As an alternative to piecewise constant controls, it is also possible to\n",
     "use other discretizations, such as polynomials or splines. In any case,\n",
     "the control is specified by a linear combination of *basis functions*\n",
-    "$$u(t) = \\sum_{i=1}^N c_i \\beta_i(t)$$ where the $c_i \\in \\mathbb{R}^m$\n",
+    "$$u(t) = \\sum_{i=1}^k c_i \\beta_i(t)$$ where the $c_i \\in \\mathbb{R}^m$\n",
     "are control coefficients, which are to be chosen by the optimization,\n",
     "and the basis functions $\\beta_i(t)$ are constant. For example, a set of\n",
-    "polynomial basis functions could be $1$, $t$, $t^2$, \\..., $t^{N-1}$.\n",
+    "polynomial basis functions could be $1$, $t$, $t^2$, \\..., $t^{k-1}$.\n",
     "The difficulty with such parameterizations is that the state trajectory\n",
     "depends on every control coefficient, so evaluating the gradient is\n",
-    "computationally expensive.\n",
+    "computationally expensive. \n",
     "\n",
-    "Another approach is to perform *state trajectory parameterization* in\n",
-    "which the state trajectory is an optimization variable that is\n",
-    "parameterized explicitly along with the control trajectory. A potential\n",
-    "difficulty with this method is that enforcing dynamic constraints is\n",
-    "challenging, and instead must be performed at a finite number of points\n",
+    "To address this problem, it is typical to include a *state trajectory parameterization* in\n",
+    "which the state trajectory $x(t)$ is also represented as an optimization variable that is\n",
+    "parameterized explicitly along with the control trajectory. Specifically, we suppose that $$x(t) = \\sum_{i=1}^k d_i \\gamma_i(t)$$ where the $d_i \\in \\mathbb{R}^n$ are state coefficients to be optimized, and the basis functions $\\gamma_i$ are constant.  The main challenge is then to enforce dynamic consistency between the $x$ trajectory and the $u$ trajectory over the time domain.  Because it is impossible to do this exactly in a continuous infinity of points, the dynamic consistance must then be enforced at a finite number of points\n",
     "in time, which are known as *collocation points*. The result is an\n",
     "equality-constrained, finite-dimensional optimization problem.\n",
+    "\n",
+    "Specifically, given $N$ points in the time domain $t_1,\\ldots,t_N$, dynamic consistency is enforced at the $j$'th time point with a constraint\n",
+    "$$\n",
+    "x^\\prime(t_j) = f(x(t_j),u(t_j) )\n",
+    "$$\n",
+    "which can be rewritten in terms of the cofficients\n",
+    "$$\n",
+    "\\sum_{i=1}^k d_i \\gamma_i^\\prime(t_j) = f\\left(\\sum_{i=1}^k d_i \\gamma_i(t_j), \\sum_{i=1}^k c_i \\beta_i(t_j) \\right).\n",
+    "$$\n",
+    "\n",
+    "\n",
     "\n",
     "### Handling infinite-horizon problems\n",
     "\n",
@@ -764,7 +775,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
