Added some more info about positive definiteness

--- a/LinearAlgebra.ipynb
+++ b/LinearAlgebra.ipynb
@@ -244,14 +244,20 @@
     "An $n\\times n$ matrix $A$ is called *symmetric positive definite*\n",
     "(s.p.d.), or just positive definite, if it is symmetric ($A=A^T$) and\n",
     "satisfies the following condition:\n",
-    "$$\\V{x}^T A \\V{x} > 0 \\text{ for all }\\V{x}\\in \\mathbb{R}^n.$$  For\n",
-    "example, an identity matrix is s.p.d., as is any matrix $A = B^T B$ with\n",
-    "$B$ a matrix with rank $n$. An s.p.d. matrix is invertible.\n",
+    "$$\\V{x}^T A \\V{x} > 0 \\text{ for all }\\V{x}\\in \\mathbb{R}^n.$$ \n",
+    "Some useful properties include:\n",
+    "- An identity matrix is s.p.d.\n",
+    "- A scaling $A = cB$ of a s.p.d. matrix $B$ is s.p.d. iff $c > 0$.\n",
+    "- Any matrix $A = B^T B$, with $B$ a matrix with rank $n$, is s.p.d.\n",
+    "- A symmetric matrix with eigenvalues $\\lambda_1,\\ldots,\\lambda_n$ is symmetric positive definite if all $\\lambda_i > 0, \\forall i=1,...,n$.\n",
+    "- An s.p.d. matrix is invertible.\n",
     "\n",
     "A matrix is positive semi-definite (p.s.d.) if the strict positivity\n",
     "condition is replaced with a nonnegativity condition:\n",
-    "$$\\V{x}^T A \\V{x} \\geq 0 \\text{ for all }\\V{x}\\in \\mathbb{R}^n.$$ Any\n",
-    "s.p.d. matrix is also p.s.d., and any matrix $A=B^TB$ is also p.s.d.\n"
+    "$$\\V{x}^T A \\V{x} \\geq 0 \\text{ for all }\\V{x}\\in \\mathbb{R}^n.$$\n",
+    "- Any s.p.d. matrix is also p.s.d.\n",
+    "- Any matrix $A=B^TB$ is also p.s.d.\n",
+    "- A symmetric matrix with eigenvalues $\\lambda_1,\\ldots,\\lambda_n$ is symmetric positive definite if all $\\lambda_i \\geq 0, \\forall i=1,...,n$."
    ]
   },
   {
@@ -264,21 +270,21 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
