Added new info about behavior scripting and generate-and-score

--- a/WhatIsMotionPlanning.ipynb
+++ b/WhatIsMotionPlanning.ipynb
@@ -201,6 +201,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Heuristic methods\n",
+    "\n",
+    "As a counterpoint to the more principled approaches that we will begin to study in the next chapter, it is worth mentioning two heuristic methods that are often used in practice.\n",
+    "\n",
+    "### Behavior scripting\n",
+    "\n",
+    "In behavior scripting, the output of the robot's planner is the control signal, which is a straightforward function of its input sensor signals.  The function is programmed as a set of arithmetic operations and if-else statements.  Behavior scripting has the appeal in that it provides novices with an easy path to start experimenting with robot behaviors.  For example, to follow a black line on a sheet of white paper, two brightness sensors can be used, one to the left and the other to the right of the line.  If the left sensor reads \"black\", turn the wheel more to the left and reduce the forward velocity.  If the right sensor reads \"black\", turn the wheel more to the right and reduce the forward velocity.  Otherwise, turn the wheel toward center, and increase the forward velocity.  Properly tuned, this behavior will do a reasonable job at following lines that are not too curved at a slow speed.\n",
+    "\n",
+    "The challenge is that as the problem domain becomes more complex, the complexity of the behavior script (and the difficulty of programming good behavior) tends to grow exponentially.\n",
+    "\n",
+    "### Generate-and-score\n",
+    "\n",
+    "One straightforward way of performing motion planning is a three step process:\n",
+    "1. _Generate_ a set of $N$ paths $p_1,\\ldots,p_N$, each of which starts from the robot's current state $x$.\n",
+    "2. _Score_ each path using a score function $S(p)$.  Let $p_i$ be the path with minimum score.\n",
+    "3. _Execute_ the first part of $p_i$, and then repeat from step 1.\n",
+    "\n",
+    "A huge range of behavior can be obtained by tweaking the path generation and scoring methods.  In fact, most motion planners perform some variant of this process, but use sophisticated methods to generate the paths.  This approach can be very computationally light, and even effective at solving some problems.  However, because the generated paths usually do not reach all the way to the goal, this approach assumes that the problem requires minimal amounts of long-range deliberation to reach the goal.\n",
+    "\n",
+    "As an example, a random-path generation approach simply generates $N$ paths at random, and the scoring function will assign infinite cost to any infeasible path. For feasible paths, the score will measure a combination of the length of the path and the distance from the end of the path to the goal. What we can observe with this approach is that its success is highly problem-dependent. If the robot is traveling in a wide open space or around small obstacles, then it works fairly well, although there is a little jittering.  This jittering can be reduced by applying some smoothing in postprocessing.  However, if the robot must exit a room before making progress to the goal, then it will be incredibly unlikely to find a path out of the first room.  This is known as a *local minimum*, which will be a reoccurring issue throughout robotics (and other fields of engineering as well.)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Representations of paths\n",
     "\n",
     "A path is a continuous curve \n",
@@ -404,7 +430,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
