--- a/Geometry.ipynb
+++ b/Geometry.ipynb
@@ -426,7 +426,7 @@
     "\n",
     "- $G(t) = \\{ T(t)x \\quad|\\quad x \\in G_L \\}$.  (Imagine the points of the local geometry moving with the object's transform)\n",
     "\n",
-    "- $G(t) = \\{ x \\in R^3 \\quad|\\quad T(t)^{-1} x \\in G_L \\}$.  (Imagine the points in world coordinates being project back into the reference frame)\n",
+    "- $G(t) = \\{ x \\in R^3 \\quad|\\quad T(t)^{-1} x \\in G_L \\}$.  (Imagine the points in world coordinates being projected back into the reference frame)\n",
     "\n",
     "Both representations are useful for different computations. Because it is much more efficient to change transforms than geometry data, is ubiquitous to represent geometries in a *transform-decoupled* manner as local-geometry / transform pairs $G=(G_L,T)$. For example, if a triangle mesh with 1,000,000 points undergoes a rotation and translation, this can be calculated using 1,000,000 3x3 matrix-vector multiplies and the same number of 3-vector additions. But, in a transform-decoupled representation, we can update the geometry's representation only 1 4x4 matrix multiply (using homogeneous coordinates), or 1 3x3 matrix-matrix multiply, a matrix-vector multiply, and a 3-vector addition (using rotation matrix and translation vectors)."
    ]
@@ -818,7 +818,7 @@
     "\n",
     "| (a) High-resolution visualization geometry | (b) Lower-resolution collision geometry\n",
     "|---------------------------------------------------------------|--------------------------------------------------------|\n",
-    "|![fig:hubo_vis](figures/modeling/hubo_visualization_geometry.png) | ![fig:hubo_col](figures/modeling/hubo_collision_geometry.png)\n",
+    "|![fig:hubo_vis](figures/modeling/hubo_visualization_geometry.png) | ![fig:hubo_col](figures/modeling/hubo_collision_geometry.png) |\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:vis_coll_geometry\">Figure 6</a>. \n",
     "    Visualization geometry for robots may be stored separately from the collision detection geometry, and may contain more details to improve the quality of visualization.\n",
@@ -888,7 +888,7 @@
     "\n",
     "| (a) A point cloud, from a similar vantage point to the camera | (b) A close up of the desk, from another vantage point|\n",
     "|---------------------------------------------------------------|--------------------------------------------------------|\n",
-    "|![fig:point_cloud](figures/modeling/point_cloud.png) | ![fig:point_cloud2](figures/modeling/point_cloud2.png)\n",
+    "|![fig:point_cloud](figures/modeling/point_cloud.png) | ![fig:point_cloud2](figures/modeling/point_cloud2.png) |\n",
     "\n",
     "<div class=\"figcaption\"><a name=\"fig:point_cloud\">Figure 7</a>. \n",
     "    A point cloud of an office scene from an RGB-D camera, from the Cornell RGBD Dataset. Away from the original camera's vantage point, the data is difficult to interpret.\n",
@@ -1206,7 +1206,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
