--- a/Book.ipynb
+++ b/Book.ipynb
@@ -35,8 +35,8 @@
     "\n",
     "  * [Chapter 8. What is motion planning?](WhatIsMotionPlanning.ipynb) **75% complete**\n",
     "  * [Chapter 9. Motion planning in simple geometric spaces](GeometricMotionPlanning.ipynb) **85% complete**\n",
-    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **85% complete**\n",
-    "  * [Chapter 11. Extensions to motion planning](ExtensionsToMotionPlanning.ipynb) **incomplete**\n",
+    "  * [Chapter 10. Motion planning in higher dimensions](MotionPlanningHigherDimensions.ipynb) **90% complete**\n",
+    "  * [Chapter 11. Extensions to basic planning](ExtensionsToMotionPlanning.ipynb) **incomplete**\n",
     "\n",
     "* Section IV. Dynamics and Control\n",
     "\n",
@@ -61,7 +61,7 @@
     "\n",
     "  * [B.1. Numerical errors](NumericalErrors.ipynb)\n",
     "  * [B.2. Matrix computations](MatrixComputations.ipynb) **20% complete**\n",
-    "  * [B.3. Optimization](Optimization.ipynb) **50% complete**\n",
+    "  * [B.3. Optimization](Optimization.ipynb) **80% complete**\n",
     "\n",
     "* Appendix C. Computational methods \n",
     "\n",
@@ -149,7 +149,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.7.3"
   },
   "latex_envs": {
    "LaTeX_envs_menu_present": true,
